# OpenATC

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  compile_commands.json  todo.txt  tree.txt
.github/workflows/: ci.yml
cmake/: FetchOnnxRuntime.cmake
dict/: vocab.txt
dict/cmudict-0.7b/: make_ps_dict.py
src/: Constants.h  main.cpp  stt_test.main.cpp
src/ai/llm/llamacpp/: LlamacppBackend.cpp  LlamacppBackend.h
src/ai/stt/Whisper/: WhisperBackend.cpp  WhisperBackend.h
src/ai/tts/: ITTSBackend.h
src/ai/tts/SherpaOnnx/: SherpaOnnxBackend.h
src/clients/huggingface/: HuggingFace.h
src/config/: Config.h
src/core/audio/: IAudioBackend.h  Sound.h
src/core/audio/OpenAL/: OpenALBackend.cpp  OpenALBackend.h
src/core/config/: Config.cpp  Config.h
src/core/llm/: ILLMBackend.h
src/core/llm-backend/: ILLMBackend.h  Message.h
src/core/llm-backend/llamacpp/: LlamacppBackend.cpp  LlamacppBackend.h
src/core/llm/llamacpp/: LlamacppBackend.cpp  LlamacppBackend.h
src/core/microphone/: AudioData.h  Microphone.cpp  Microphone.h  MicrophoneInputAudioData.h
src/core/net/: DownloadManager.cpp  DownloadManager.h  HttpClient.cpp
src/core/pipeline/: ATCEventType.h  ATCPipeline.cpp  ATCPipeline.h
src/core/pipeline/microphone/: MicrophonePipeline.cpp  MicrophonePipeline.h
src/core/stt-backend/: ISTTBackend.h
src/core/stt-backend/Whisper/: WhisperBackend.cpp  WhisperBackend.h
src/core/stt/Whisper/: WhisperBackend.cpp  WhisperBackend.h
src/core/tts/: ITTSBackend.h
src/core/tts/SherpaOnnx/: SherpaOnnxBackend.cpp  SherpaOnnxBackend.h
src/core/tts/Voxtral/: VoxtralBackend.cpp  VoxtralBackend.h
src/gui/: Manager.cpp  Manager.h
src/gui/huggingface/: HuggingFace.ui
src/gui/main/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/gui/settings/: Settings.cpp  Settings.h  Settings.ui
src/huggingface/: HuggingFace.cpp
src/navigation/: Airway.h  Coordinates.h  Point.h
src/navigation/airac/: IAIRAC.h
src/net/: DownloadManager.h  HttpClient.cpp  HttpClient.h
src/simulation/: Coordinates.h  Engine.h  Entity.h  Frequency.h  World.h
src/simulation/aircraft/: AirCraft.h  Aircraft.h  AircraftModel.h  AircraftType.h
src/simulation/airport/: Airport.cpp  Airport.h  Parking.h  Runway.h
src/utils/: FileNode.h  LLMTask.h  LLMTaskType.h  MicrophoneActivationType.h  NoiseSuppressionType.h  WavLoader.h
